[gd_scene load_steps=58 format=3 uid="uid://du02kq7mkyull"]

[ext_resource type="Shader" uid="uid://chvg7tt7fvn81" path="res://Shaders/flash.gdshader" id="1_nu5bn"]
[ext_resource type="Script" uid="uid://doip6q4xhc234" path="res://Scripts/swordEnemy.gd" id="2_eiu2b"]
[ext_resource type="Texture2D" uid="uid://wxgkky5poraf" path="res://Assets/Characters/Characters(100x100)/Skeleton/Skeleton/Skeleton.png" id="3_nu5bn"]
[ext_resource type="Texture2D" uid="uid://pmeowwd68m1i" path="res://Assets/Characters/Characters(100x100)/Armored Skeleton/Armored Skeleton/Shadow sprites/Armored Skeleton-Shadow.png" id="4_rjsu3"]
[ext_resource type="Texture2D" uid="uid://blopey63jbrkb" path="res://Assets/Characters/Characters(100x100)/Skeleton/Skeleton/Shadow sprites/Skeleton-Shadow_death.png" id="5_nu5bn"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_xhj3x"]
frequency = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_3je14"]
width = 1000
height = 1000
noise = SubResource("FastNoiseLite_xhj3x")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cvx2j"]
resource_local_to_scene = true
shader = ExtResource("1_nu5bn")
shader_parameter/whiteness = 0.0
shader_parameter/noise_tex = SubResource("NoiseTexture2D_3je14")
shader_parameter/dissolve_amount = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_eiu2b"]
atlas = ExtResource("3_nu5bn")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ry3g"]
atlas = ExtResource("3_nu5bn")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjsu3"]
atlas = ExtResource("3_nu5bn")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_05oj5"]
atlas = ExtResource("3_nu5bn")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5ohb"]
atlas = ExtResource("3_nu5bn")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbo6h"]
atlas = ExtResource("3_nu5bn")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qykqd"]
atlas = ExtResource("3_nu5bn")
region = Rect2(0, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymct7"]
atlas = ExtResource("3_nu5bn")
region = Rect2(100, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1oimy"]
atlas = ExtResource("3_nu5bn")
region = Rect2(200, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_857sl"]
atlas = ExtResource("3_nu5bn")
region = Rect2(300, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeuos"]
atlas = ExtResource("3_nu5bn")
region = Rect2(400, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf5b6"]
atlas = ExtResource("3_nu5bn")
region = Rect2(500, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f41yo"]
atlas = ExtResource("3_nu5bn")
region = Rect2(600, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyy5x"]
atlas = ExtResource("3_nu5bn")
region = Rect2(0, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1gwr"]
atlas = ExtResource("3_nu5bn")
region = Rect2(100, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y68w"]
atlas = ExtResource("3_nu5bn")
region = Rect2(200, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxgcp"]
atlas = ExtResource("3_nu5bn")
region = Rect2(300, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpff1"]
atlas = ExtResource("3_nu5bn")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_glkr2"]
atlas = ExtResource("3_nu5bn")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_no8l6"]
atlas = ExtResource("3_nu5bn")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h71ur"]
atlas = ExtResource("3_nu5bn")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6ix7"]
atlas = ExtResource("3_nu5bn")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_awrkm"]
atlas = ExtResource("3_nu5bn")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks856"]
atlas = ExtResource("3_nu5bn")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2akp"]
atlas = ExtResource("3_nu5bn")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e44v"]
atlas = ExtResource("3_nu5bn")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_da464"]
atlas = ExtResource("3_nu5bn")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfyij"]
atlas = ExtResource("3_nu5bn")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypqot"]
atlas = ExtResource("3_nu5bn")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_igmy2"]
atlas = ExtResource("3_nu5bn")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ih8h"]
atlas = ExtResource("3_nu5bn")
region = Rect2(700, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_1telt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eiu2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ry3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjsu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05oj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5ohb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbo6h")
}],
"loop": false,
"name": &"attack-1",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qykqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymct7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1oimy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_857sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeuos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf5b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f41yo")
}],
"loop": false,
"name": &"attack-2",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyy5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1gwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y68w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxgcp")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpff1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glkr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no8l6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h71ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6ix7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awrkm")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks856")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2akp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e44v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_da464")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfyij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypqot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igmy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ih8h")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4qae2"]
atlas = ExtResource("4_rjsu3")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1telt"]
atlas = ExtResource("5_nu5bn")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qyts"]
atlas = ExtResource("5_nu5bn")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_032lo"]
atlas = ExtResource("5_nu5bn")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bev0"]
atlas = ExtResource("5_nu5bn")
region = Rect2(300, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_2gcy2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qae2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1telt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qyts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_032lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bev0")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8l058"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cvx2j"]
radius = 9.0
height = 20.0

[sub_resource type="Gradient" id="Gradient_hn8e4"]
offsets = PackedFloat32Array(0, 0.19178082, 1)
colors = PackedColorArray(0.6431373, 0.6431373, 0.6431373, 1, 0.5726565, 0.5726565, 0.5726565, 0.89041096, 0, 0, 0, 0)

[sub_resource type="Animation" id="Animation_xhj3x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/whiteness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/dissolve_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.5370987, 0.5370987, 0.5370987, 0.6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Areas/CPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3je14"]
resource_name = "die"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/dissolve_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.5370987, 0.5370987, 0.5370987, 0.6), Color(0.5370987, 0.5370987, 0.5370987, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Areas/CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_hn8e4"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/whiteness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xhj3x"]
_data = {
&"RESET": SubResource("Animation_xhj3x"),
&"die": SubResource("Animation_3je14"),
&"hit": SubResource("Animation_hn8e4")
}

[sub_resource type="Animation" id="Animation_g2p5r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Areas/Hits/attack-1:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Areas/Hits/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_cvx2j"]
resource_name = "attack-1"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Areas/Hits/attack-1:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_tj6wx"]
resource_name = "attack-2"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Areas/Hits/CollisionPolygon2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5nddp"]
_data = {
&"RESET": SubResource("Animation_g2p5r"),
&"attack-1": SubResource("Animation_cvx2j"),
&"attack-2": SubResource("Animation_tj6wx")
}

[node name="Skeleton" type="CharacterBody2D" groups=["Enemy"]]
material = SubResource("ShaderMaterial_cvx2j")
collision_layer = 0
script = ExtResource("2_eiu2b")
health = 1.0
speed = 50
cooldown = 0.7

[node name="Sprite" type="AnimatedSprite2D" parent="."]
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_1telt")
animation = &"die"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="Shadow" type="AnimatedSprite2D" parent="."]
modulate = Color(0.5370987, 0.5370987, 0.5370987, 0.6)
z_index = -1
sprite_frames = SubResource("SpriteFrames_2gcy2")
animation = &"die"
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, 6)
shape = SubResource("CircleShape2D_8l058")

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(1, -1)
shape = SubResource("CapsuleShape2D_cvx2j")

[node name="Areas" type="Node2D" parent="."]

[node name="Hits" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 2

[node name="attack-1" type="CollisionPolygon2D" parent="Areas/Hits"]
visible = false
polygon = PackedVector2Array(3, 9, 19, 7, 24, -1, 25, -13, 12, -19, 3, -17, 1, -12, 9, -10, 9, -2, 2.3796387, 2.4862213)
disabled = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Areas/Hits"]
visible = false
polygon = PackedVector2Array(9, -4, 22, -2, 33, 6, 28, 11, 20, 15, -5, 14, -17, 5, -12, 0, -6, 6, 8, 3, 4, 0)
disabled = true

[node name="Checks" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 2

[node name="attack-1" type="CollisionPolygon2D" parent="Areas/Checks"]
visible = false
polygon = PackedVector2Array(3, 9, 19, 7, 24, -1, 25, -13, 12, -19, 3, -17, 1, -12, 9, -10, 9, -2, 2.3796387, 2.4862213)

[node name="CPUParticles2D" type="CPUParticles2D" parent="Areas"]
position = Vector2(2, 4)
emitting = false
emission_shape = 3
emission_rect_extents = Vector2(8.195, 3.08)
direction = Vector2(0, -1)
spread = 20.0
gravity = Vector2(0, 1)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
color_ramp = SubResource("Gradient_hn8e4")
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="Hit" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xhj3x")
}
speed_scale = 1.5

[node name="Attack" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5nddp")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
avoidance_layers = 2
avoidance_mask = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="area_entered" from="Areas/Hits" to="." method="_on_hits_area_entered"]
[connection signal="area_entered" from="Areas/Checks" to="." method="_on_checks_area_entered"]
[connection signal="area_exited" from="Areas/Checks" to="." method="_on_checks_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
